# MBZ

./: README  README.md  mbz_workings_notes.txt
mbz/: local.properties  mbz_test.go
mbz/app/: CMakeLists.txt  build.gradle
mbz/app/src/androidTest/java/com/aqualab/mbz/: ExampleInstrumentedTest.java
mbz/app/src/main/: AndroidManifest.xml
mbz/app/src/main/cpp/: mbz-lib.cpp
mbz/app/src/main/cpp/common/: utils.cpp  utils.h
mbz/app/src/main/cpp/pcpp/: ArpLayer.cpp  ArpLayer.h  DhcpLayer.h  DnsLayer.h  EthLayer.cpp  EthLayer.h  GreLayer.cpp  GreLayer.h  IPReassembly.cpp  IPReassembly.h  IPv4Layer.h  IPv6Extensions.cpp  IPv6Extensions.h  IPv6Layer.cpp  IPv6Layer.h  IcmpLayer.cpp  IcmpLayer.h  IgmpLayer.cpp  IgmpLayer.h  IpAddress.cpp  IpAddress.h  IpUtils.cpp  IpUtils.h  LRUList.h  Layer.h  Logger.cpp  MacAddress.cpp  MacAddress.h  MplsLayer.cpp  MplsLayer.h  PPPoELayer.cpp  PPPoELayer.h  PayloadLayer.cpp  PayloadLayer.h  PcapPlusPlusVersion.cpp  PcapPlusPlusVersion.h  PlatformSpecificUtils.h  PointerVector.h  SSLCommon.h  SSLHandshake.cpp  (+13 more)
mbz/app/src/main/cpp/routing/: Flow.cpp  Flow.h  FlowId.cpp  FlowId.h  FlowTable.cpp  FlowTable.h  InPacket.cpp  InPacket.h  Jni.cpp  Jni.h  OutPacket.cpp  OutPacket.h  Plugin.cpp  Plugin.h  PluginTable.cpp  PluginTable.h  Router.cpp  Router.h  ServiceTable.cpp  ServiceTable.h  TcpFlow.cpp  TcpFlow.h  UdpFlow.cpp  UdpFlow.h
mbz/app/src/main/cpp/services/: FlowStatsService.cpp  FlowStatsService.h  Service.cpp  Service.h  UiService.cpp  UiService.h  WifiService.cpp  WifiService.h
mbz/app/src/main/java/com/aqualab/mbz/: MbzActivity.java  MbzService.java  Plugin.java  PluginActivity.java  PluginConfig.java  PluginController.java  PluginDownloader.java  RouterController.java
mbz/app/src/main/res/layout/: activity_plugin.xml  mbz.xml  plugin_entry.xml
mbz/app/src/main/res/values/: strings.xml
mbz/app/src/test/java/com/aqualab/mbz/: ExampleUnitTest.java
mbz/gradle/wrapper/: gradle-wrapper.properties
plugins/: deploy.sh
plugins/firewall/app/: build.gradle
plugins/firewall/app/src/androidTest/java/com/nalindquist/firewall/: ExampleInstrumentedTest.java
plugins/firewall/app/src/main/: AndroidManifest.xml
plugins/firewall/app/src/main/cpp/: plugin.cpp
plugins/firewall/app/src/main/java/com/nalindquist/firewall/: PluginActivity.java  PluginLayout.java
plugins/firewall/app/src/main/res/layout/: activity_plugin.xml
plugins/firewall/app/src/main/res/values/: strings.xml
plugins/firewall/app/src/test/java/com/nalindquist/firewall/: ExampleUnitTest.java
plugins/firewall/gradle/wrapper/: gradle-wrapper.properties
plugins/ifmanager/app/: CMakeLists.txt  build.gradle
plugins/ifmanager/app/src/androidTest/java/com/nalindquist/ifmanager/: ExampleInstrumentedTest.java
plugins/ifmanager/app/src/main/: AndroidManifest.xml
plugins/ifmanager/app/src/main/cpp/: plugin.cpp
plugins/ifmanager/app/src/main/res/layout/: activity_plugin.xml
plugins/ifmanager/app/src/main/res/values/: strings.xml
plugins/ifmanager/gradle/wrapper/: gradle-wrapper.properties
plugins/snitch/: MeasurePageLoad.py  copy.sh  run_test.py  table.tex  test.py
plugins/snitch/app/: build.gradle
plugins/snitch/app/src/main/: AndroidManifest.xml
plugins/snitch/app/src/main/cpp/: plugin.cpp
plugins/snitch/app/src/main/res/values/: strings.xml
plugins/snitch/gradle/wrapper/: gradle-wrapper.properties
plugins/snitch/output/: ip_info.txt  ips.txt  parse.py  parse_less.py  results.txt
plugins/snitch/output/raw/: home-abc-wifi-False-1-cbc.ca.txt  home-abc-wifi-False-1-npr.org.txt  home-abc-wifi-False-1-www.abcnews.go.com.txt  home-abc-wifi-False-1-www.bbc.com.txt  home-abc-wifi-False-1-www.cbsnews.com.txt  home-abc-wifi-False-1-www.cnbc.com.txt  home-abc-wifi-False-1-www.cnn.com.txt  home-abc-wifi-False-1-www.ft.com.txt  home-abc-wifi-False-1-www.github.com.txt  home-abc-wifi-False-1-www.independent.co.uk.txt  home-abc-wifi-False-1-www.latimes.com.txt  home-abc-wifi-False-1-www.msn.com.txt  home-abc-wifi-False-1-www.nytimes.com.txt  home-abc-wifi-False-1-www.rawstory.com.txt  home-abc-wifi-False-1-www.reddit.com.txt  home-abc-wifi-False-1-www.theguardian.com.txt  home-abc-wifi-False-1-www.time.com.txt  home-abc-wifi-False-1-www.vox.com.txt  home-abc-wifi-False-1-www.washingtonpost.com.txt  home-abc-wifi-False-1-www.yahoo.com.txt
plugins/snitch/output/summaries/: home-abc-wifi-False-1-cbc.ca-summary.json  home-abc-wifi-False-1-npr.org-summary.json  home-abc-wifi-False-1-www.abcnews.go.com-summary.json  home-abc-wifi-False-1-www.bbc.com-summary.json  home-abc-wifi-False-1-www.cbsnews.com-summary.json  home-abc-wifi-False-1-www.cnbc.com-summary.json  home-abc-wifi-False-1-www.cnn.com-summary.json  home-abc-wifi-False-1-www.ft.com-summary.json  home-abc-wifi-False-1-www.github.com-summary.json  home-abc-wifi-False-1-www.independent.co.uk-summary.json  home-abc-wifi-False-1-www.latimes.com-summary.json  home-abc-wifi-False-1-www.msn.com-summary.json  home-abc-wifi-False-1-www.nytimes.com-summary.json  home-abc-wifi-False-1-www.rawstory.com-summary.json  home-abc-wifi-False-1-www.reddit.com-summary.json  home-abc-wifi-False-1-www.theguardian.com-summary.json  home-abc-wifi-False-1-www.time.com-summary.json  home-abc-wifi-False-1-www.vox.com-summary.json  home-abc-wifi-False-1-www.washingtonpost.com-summary.json  home-abc-wifi-False-1-www.yahoo.com-summary.json
plugins/snitch/temp_output/raw/: home-abc-wifi-False-1-www.bbc.com.txt  home-abc-wifi-False-1-www.ft.com.txt  home-abc-wifi-False-1-www.github.com.txt  home-abc-wifi-False-1-www.msn.com.txt  home-abc-wifi-False-1-www.nytimes.com.txt
plugins/snitch/temp_output/summaries/: home-abc-wifi-False-1-www.bbc.com-summary.json  home-abc-wifi-False-1-www.ft.com-summary.json  home-abc-wifi-False-1-www.github.com-summary.json  home-abc-wifi-False-1-www.msn.com-summary.json  home-abc-wifi-False-1-www.nytimes.com-summary.json
test/echo/: Makefile
test/echo/client/: Makefile  client  client.c
test/echo/server/: Makefile  server  server.c
(+7 files in other folders)
